[project]
name = "drips-complex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "m-a-huber", email = "hubermarius@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "giotto-ph>=0.2.4",
    "gudhi>=3.10.1",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "typing-extensions>=4.12.2",
]

[project.scripts]
drips-complex = "drips_complex:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
